--- a/src/app/modules/contact/addMessage/contact.component.scss
+++ b/src/app/modules/contact/addMessage/contact.component.scss
@@ -11,11 +11,11 @@
 //     border-radius: 5px;
 //   }
 mat-card{
-    margin-left: 10px;
-    margin-top: 10px;
-    background-color: rgb(255, 255, 255,.9);;// #20639b;
+  //  margin-left: 10px;
+    margin-top: 15px;
+    //background-color: lightgray;// #20639b;
     //color:white;
-    border-radius: 1em;
+    //border-top-left-radius: 1em;
 }
 .container{
     padding-left: 10px;
