--- a/src/app/modules/define-pages/texteditor/texteditor.component.scss
+++ b/src/app/modules/define-pages/texteditor/texteditor.component.scss
@@ -22,7 +22,10 @@ button{
     margin: 2px;
 }
 mat-card{
-    background-color: rgb(255, 255, 255,.9);;// #20639b;
-    border-radius: 1em;
-    margin-top: 10px;
+    background-color:lightgray;// #20639b;
+    //border-top-left-radius: 1em;
+    margin-top: 15px;
+}
+.photo{
+    margin: 10px;
 }
