--- a/src/app/modules/files/filedrag-and-drop/filedrag-and-drop.component.scss
+++ b/src/app/modules/files/filedrag-and-drop/filedrag-and-drop.component.scss
@@ -6,6 +6,6 @@ mat-form-field{
     //margin-right: 10px;
 }
 mat-card{
-    background-color: rgb(255,255,255,.9);
-    margin-top: 10px;
+   // background-color:lightgray;
+    margin-top: 15px;
 }
