--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.scss
@@ -19,9 +19,9 @@ span:hover{
  
 }
 mat-card{
-    background-color: #1E4A75;
+    background-color:var(--maincolor1);
     padding: 30px;
-    margin-top: 10px;    
+    margin-top: 15px;    
  
 }
 .whole{
