--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,7 +3,7 @@ footer{
     justify-content: center;
     padding:10px;
     color:white;
-    background-color:#1E4A75;// #98bcda;
+    background-color:var(--maincolor1);// #98bcda;
     font-size: small;
     //max-width: 81%;
 }
