--- a/src/app/shared/components/landingpage/landingpage.component.html
+++ b/src/app/shared/components/landingpage/landingpage.component.html
@@ -10,6 +10,6 @@
         <button (click)="home()" class="button buttonon">ENTER</button>
     </div>
     
-        <!-- <img src="../../../../assets/images/schooltop.png" width="100%" style="margin-top: -100px;opacity: 1.2;"> -->
+        <img src="../../../../assets/images/schooltop.png" width="100%" style="margin-top: -100px;opacity: 1.2;">
 
 </div>
