--- a/src/app/modules/define-pages/displaypage/displaypage.component.scss
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.scss
@@ -1,23 +1,29 @@
 :host {
     width       : 100%;
-    //margin-top:50px;
 }
 
-mat-card-subtitle {
-    color: rgb(201, 200, 200,.9);
+mat-card-title {
+    padding: 20px 0px 0px 20px;
+    //color: rgb(201, 200, 200,.9);
 }
-
+.clickable{
+    margin-left: 20px;
+    //padding: 20px;
+    text-decoration: none;
+    color:lightgrey;
+    
+}
+.clickable:hover{
+    background-color:var(--onHoverColor);
+}
 .contentbody {
-    border-radius   : 1em;
+    //border-top-left-radius: 1em;
     margin-top      : 16px;
-    //padding: 25px;
-    background-color: #1E4A75; //#20639b;
-    // background: url('/assets/images/schoolbuilding2018.jfif' );    
-    //opacity: 0.9;
-    // z-index: 100;
+    background-color:var(--mainTitleColor);// var(--maincolor1); //#20639b;
     color           : #fafafa;
-    //    width: 100%;
+    padding: 0;
 }
+
 
 .container {
     position : relative;
@@ -25,6 +31,7 @@ mat-card-subtitle {
     margin   : 0px;
     padding  : 0px;
     height   : auto;
+    display: block;
 }
 
 .container img {
@@ -32,43 +39,35 @@ mat-card-subtitle {
 }
 
 .content {
-    //position: absolute;
-    margin-top: -100px;
+    position  : relative;
+    bottom    : 0;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    color     : #f1f1f1;
+    width     : 100%;
+    height    : 50%;
+    margin-top: -50px;
+    padding   : 30px;
+    //margin-top: -100px;
 }
 
-@media only screen and (max-width: 600px) {
-    .content {
-        position  : relative;
-        bottom    : 0;
-        background: rgb(0, 0, 0);
-        /* Fallback color */
-        background: rgba(0, 0, 0, 0.5);
-        /* Black background with 0.5 opacity */
-        color     : #f1f1f1;
-        width     : 100%;
-        height    : 50%;
-        margin-top: -50px;
-        padding   : 30px;
-    }
-
-    // .container {
-    //     padding: 30px;
-    // }
-}
-
-@media only screen and (min-width: 600px) {
-    .container .content {
-        position  : relative;
-        bottom    : 0;
-        background: rgb(0, 0, 0);
-        /* Fallback color */
-        background: rgba(0, 0, 0, 0.5);
-        /* Black background with 0.5 opacity */
-        color     : #f1f1f1;
-        width     : 100%;
-        height    : 50%;
-        padding   : 50px;
-    }
+// @media only screen and (max-width: 600px) {
+//     .content {
+//         margin-top: -50px;
+//     }
+// }
+// @media only screen and (max-width : 1279px) {
+//     .content {
+//         margin-top: -50px;
+//     }
+// }
+// @media only screen and (min-width: 1280px) {
+//     .container .content {
+//         margin-top: -50px;
+//     }
+// }
+mat-card-title:not(:first-child), .mat-card-subtitle:not(:first-child){
+    margin-top: -8px;
 }
 
 .mat-card>:first-child,
