--- a/src/app/modules/define-pages/pageDashboard/pageDashboard.component.scss
+++ b/src/app/modules/define-pages/pageDashboard/pageDashboard.component.scss
@@ -2,9 +2,9 @@
   max-width: 78%;
 }
 mat-card{
-  border-radius: 1rem;
-  background-color: rgb(255, 255, 255,.9);
-  margin-top: 10px;
+  //border-top-left-radius: 1rem;
+  background-color: lightgray;
+  margin-top: 15px;
 }
 mat-table{
   background-color: rgb(255, 255, 255,.9);
