--- a/src/app/modules/newsdashboard/newsdashboard.component.html
+++ b/src/app/modules/newsdashboard/newsdashboard.component.html
@@ -5,8 +5,9 @@
     <mat-card-content>
         <!-- <mat-divider></mat-divider> -->
         <div class="contentbox">
-            <div *ngFor="let element of AllData">
-                <a class="subtitle" style="color:rgb(201, 200, 200)" (click)="view(element)">
+            <div fxLayout="row" fxLayoutAlign="start start" *ngFor="let element of AllData">
+                <img src="../../../assets/images/icons8-vote.svg" style="margin-top:8px;"/>
+                <a class="subtitle" style="text-decoration:none;color:rgb(201, 200, 200)" (click)="view(element)">
                     <div>{{element.Title|titlecase}}
                         <br><span style="color:rgb(201, 200, 200,.9);font-size: small;">
                             {{element.UpdateDate|date:'dd/MM/yyyy'}}</span>
@@ -16,7 +17,7 @@
             </div>
         </div>
         <mat-divider></mat-divider>
-        <mat-paginator *ngIf="AllData.length>0" style="color:rgb(201, 200, 200);background-color: #1E4A75;" [pageSizeOptions]="[10, 25, 100]">
+        <mat-paginator *ngIf="AllData.length>0" style="color:rgb(201, 200, 200);background-color:var(--maincolor1);" [pageSizeOptions]="[10, 25, 100]">
         </mat-paginator>
 
     </mat-card-content>
