--- a/src/app/modules/newsdashboard/newsdashboard.component.scss
+++ b/src/app/modules/newsdashboard/newsdashboard.component.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 :host {
   border-radius: 1em;
   //padding: 15px;
@@ -5,10 +7,10 @@
 }
 
 mat-card {
-  background-color: #1E4A75;
+  background-color:var(--maincolor1);
   //border-color: gainsboro;
-  border-radius   : 1em;
-  margin-top      : 10px;
+  //border-radius   : 1em;
+  margin-top      : 15px;
   //padding-top: 20px;
 }
 
@@ -44,8 +46,8 @@ div.ng-star-inserted{
   border-top-right-radius   : 5px;
   padding         : 5px;
   background-color: rgb(255, 255, 255, 20%);
-  margin-top      : 10px;
-  font-size       : large;
+  margin-top      : 15px;
+  font-size       : medium;
   display         : grid;
   place-items     : center;
   color           :orange;
@@ -63,7 +65,32 @@ td.mat-footer-cell {
   width              : 300px;
   border-bottom-width: 0px;
 }
-
+.news img{
+  display: inline-block;
+}  
+div .ng-star-inserted:hover {
+  padding: 5px;
+  cursor          : pointer;
+  background-color: var(--onHoverColor);
+  color: white;
+  //clip-path: polygon(-5% 50%,5% 0%, 100% 0%, 100% 100%, 5% 100%);
+}
+//   &:before{
+//     content:'';
+//     //position: relative;
+//     display: inline-block;   
+//     //color:lightgreen;
+//     height:16px;
+//     width: 16px;
+//     //left: 2em;
+//     //display: block;
+//     //border-radius: 50%;
+//     background-image: url('../../../assets/images/icons8-vote-16.png');
+//     background-size: contain;
+//     margin-right: 1em;
+//     font-family: "Material Icons"; 
+//   }
+// }
 a:hover {
   cursor: pointer;
 }
