--- a/src/app/modules/photogallery/albums/albums.component.scss
+++ b/src/app/modules/photogallery/albums/albums.component.scss
@@ -6,8 +6,8 @@
     //border-color:gray;
 }
 mat-card{
-    background-color: rgb(255,255,255,.9);
-    margin-top: 10px;
+    background-color: lightgray;
+    margin-top: 15px;
 }
 app-edit-input{
     display: inline-block;
