--- a/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.html
+++ b/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.html
@@ -1,8 +1,11 @@
 <mat-card>
     <mat-card-title>Upload Photo</mat-card-title>
     <mat-card-content>
-        <div class="text-right" style="margin-bottom: 5px;"><a class="mat-raised-button" [routerLink]="[ '/uploadphoto']">Image Crop</a></div>
-        <form [formGroup]="dragdropForm">
+        <!-- <div class="text-right" style="margin-bottom: 5px;">
+            <a class="mat-raised-button" [routerLink]="[ '/uploadphoto']">Image Crop</a></div> -->
+            <alert></alert>
+            <mat-spinner diameter="50" style="position:relative;margin-left: 50%;" *ngIf="Processing"></mat-spinner>
+            <form [formGroup]="dragdropForm">
             <div>
                 <ngx-dropzone (change)="onSelect($event)">
                     <ngx-dropzone-label>Drag and drop images here!</ngx-dropzone-label>
@@ -25,7 +28,7 @@
                       <mat-option *ngFor="let album of Albums" [value]="album.FileId">{{album.UpdatedFileFolderName}}</mat-option>
                     </mat-select>
                   </mat-form-field>                
-                <button class="mat-raised-button" matTooltip="upload" type="button" (click)="Upload()" fxFlex="5"><mat-icon>file_upload</mat-icon></button>
+                <button *ngIf="!Processing" class="mat-raised-button" matTooltip="upload" type="button" (click)="Upload()" fxFlex="5"><mat-icon>file_upload</mat-icon></button>
                   <div flex>&nbsp;</div>
             </div>
         </form>
