--- a/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.scss
+++ b/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.scss
@@ -17,7 +17,11 @@ input:hover{
  }
  mat-card{
    // width: 100%;
-    background-color: rgb(255,255,255,.9);
-    margin-top: 10px;
+    //background-color:lightgray;
+    margin-top: 15px;
     
+}
+
+.mat-form-field-infix {
+    padding-bottom: 1em !important;
 }
