--- a/src/app/shared/components/landingpage/landingpage.component.scss
+++ b/src/app/shared/components/landingpage/landingpage.component.scss
@@ -6,7 +6,7 @@
 // }
 
 .content {
-    background: linear-gradient(150deg, #00203F 10%, #198CFF 70%, #006EDB 15%);
+    background: linear-gradient(150deg, var(--maincolor2) 10%, #198CFF 70%, #006EDB 15%);
     //background-image: url('../../../../assets/images/school.png') ;
     //background-repeat:no-repeat;
     //background-position: center;
@@ -35,7 +35,7 @@
     float           : center;
     //width     : 100%;
     height          : 100%;
-    background-color: #00203F;
+    background-color: var(--maincolor2);
     //background: #f4fbfe url("../../../../assets/images/lines.png") repeat;
 }
 
