--- a/src/app/shared/components/right/right.component.html
+++ b/src/app/shared/components/right/right.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="!deviceXs" class="content">
+<div fxHide.lt-lg class="content">
     <app-newsdashboard></app-newsdashboard>    
 </div>
