--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
     --maincolor2: #00203F;
     --mainTitleColor:#28629C;
     --onHoverColor:blueviolet;
+    --ControlPanelColor:#E6F4F1;
 }
 
 mat-card {
