--- a/src/app/modules/contact/addMessage/contact.component.scss
+++ b/src/app/modules/contact/addMessage/contact.component.scss
@@ -13,7 +13,7 @@
 mat-card{
   //  margin-left: 10px;
     margin-top: 15px;
-    //background-color: lightgray;// #20639b;
+    background-color:var(--ControlPanelColor);
     //color:white;
     //border-top-left-radius: 1em;
 }
