--- a/src/app/modules/contact/contactdashboard/contactdashboard.component.scss
+++ b/src/app/modules/contact/contactdashboard/contactdashboard.component.scss
@@ -2,7 +2,7 @@
   width:78%;
 }
 mat-card{
-  background-color: rgb(255,255,255,.9);
+  background-color: var(--ControlPanelColor);
   margin-top: 15px;
 }
 table{
