--- a/src/app/modules/define-pages/pageDashboard/pageDashboard.component.scss
+++ b/src/app/modules/define-pages/pageDashboard/pageDashboard.component.scss
@@ -3,7 +3,7 @@
 }
 mat-card{
   //border-top-left-radius: 1rem;
-  background-color: lightgray;
+  background-color:var(--ControlPanelColor);
   margin-top: 15px;
 }
 mat-table{
