--- a/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.scss
+++ b/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.scss
@@ -17,7 +17,7 @@ input:hover{
  }
  mat-card{
    // width: 100%;
-    //background-color:lightgray;
+    background-color:var(--ControlPanelColor);
     margin-top: 15px;
     
 }
