--- a/src/app/shared/components/right/right.component.scss
+++ b/src/app/shared/components/right/right.component.scss
@@ -5,6 +5,7 @@
    // background-color:#1E4A75;// #20639b;
     //opacity: 0.9;
     width: 280px;
+    //clip-path: circle(108% at 0% 80%);
     //margin-top: 8px;
     //border-top-left-radius: 1em 1em;
     //height:700px;
