--- a/src/app/modules/auth/authhome/authhome.component.html
+++ b/src/app/modules/auth/authhome/authhome.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: #0F5298;">
+<div style="background-color:lightgray">
 <app-header [deviceXs]="deviceXs"></app-header>
 <router-outlet></router-outlet>
 </div>
