--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -2,6 +2,7 @@
     <mat-card-title>Create login</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
+        <alert></alert>
         <div fxLayout="row" fxLayoutAlign="center start">
             <!-- <div style="margin-right: 30px;">
                 <img *ngIf="!deviceXs" src="/assets/images/stpaulslogo.png" width="120px" alt="St Paul's Institute" />
