--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -36,6 +36,9 @@
                 <button mat-menu-item *ngIf="loggedIn" (click)="createlogin()">
                     <mat-icon>create</mat-icon>Create login
                 </button>
+                <button mat-menu-item *ngIf="loggedIn" (click)="addUser()">
+                    <mat-icon>user</mat-icon>Add User
+                </button>
                 <button mat-menu-item *ngIf="loggedIn" (click)="changepassword()">
                     <mat-icon>change_circle</mat-icon>Change password
                 </button>
