--- a/src/app/modules/FeesManagement/add-master-data/add-master-data.component.html
+++ b/src/app/modules/FeesManagement/add-master-data/add-master-data.component.html
@@ -1,19 +1,19 @@
 <div fxLayout="column" fxLayoutAlign="center center" style="margin: 15px;">
     <strong>Masters definition Statuses</strong>
-    <mat-divider></mat-divider>
-    <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="center center">
-        <div *ngFor="let item of MasterDataStatus">{{item.MasterDataName}}
+    <div style="border-collapse:collapse;border-top-color: 1px solid grey;border-bottom-color: 1px solid grey;">
+    <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center">
+        <div style="width:200px" *ngFor="let item of MasterDataStatus">{{item.MasterDataName}}
             <mat-icon matTooltip="done" *ngIf="item.Done">done</mat-icon>
             <mat-icon matTooltip="pending" *ngIf="!item.Done">pending</mat-icon>
         </div>
     </div>
-    <mat-divider></mat-divider>
 </div>
-
+</div>
 <mat-card>
     <mat-card-title>Master Data</mat-card-title>
     <mat-card-content>
         <mat-spinner *ngIf="loading"></mat-spinner>
+        <alert></alert>
         <br>
         <form [formGroup]="searchForm">
             <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="30px">
@@ -34,7 +34,6 @@
                 <button matTooltip="new master" class="mat-raised-button" (click)="NewTopMaster()" fxFlex="10">
                     <mat-icon>new_label</mat-icon>
                 </button>
-                
                 <div fxFlex>&nbsp;</div>
             </div>
         </form>
@@ -55,7 +54,7 @@
                 <ng-container matColumnDef="Description">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <FeeEditInput [data]="element.Description" (tried)="getoldvalue($event)"
+                        <FeeEditInput [data]="element.Description" 
                         (focusOut)='updateDescription($event,element)'></FeeEditInput>
                     </mat-cell>
                 </ng-container>
@@ -76,37 +75,7 @@
                 <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center" fxLayout="row">
                 </mat-row>
             </mat-table>
-            <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
-            <!-- <div>
-                <div class="Header" fxLayout="row" fxLayoutAlign="space-around center">
-                    <td>Id</td>
-                    <td>Name</td>
-                    <td>Description</td>
-                    <td>Active</td>
-                </div>
-                <mat-divider></mat-divider>
-                <div [ngClass]="{'highlight':d.MasterDataId==0}" fxLayout="row" fxLayoutAlign="space-around center"
-                    *ngFor="let d of MasterData;">
-                    <div><span>{{d.MasterDataId}}</span></div>
-                    <div>
-                        <FeeEditInput [data]="d.MasterDataName" (tried)="getoldvalue($event,d)"
-                            (focusOut)='updateName($event,d)'></FeeEditInput>
-                    </div>
-                    <div>
-                        <FeeEditInput [data]="d.Description" (tried)="getoldvalue($event)"
-                            (focusOut)='updateDescription($event,d)'></FeeEditInput>
-                    </div>
-                    <div fxLayout="row" fxLayoutAlign="center center">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(d,$event)"
-                            [checked]="d.Active">
-                        </mat-checkbox>
-
-                 
-                    </div>
-
-                </div>
-            </div> -->
-
+            <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>           
         </div>
     </mat-card-content>
 </mat-card>
