--- a/src/app/modules/FeesManagement/shared/header/feeheader.component.html
+++ b/src/app/modules/FeesManagement/shared/header/feeheader.component.html
@@ -14,6 +14,14 @@
         <div class="trainup" style="font-size: medium;height: 45px;">Train up a child in the way he should go. -
             Proverbs 22:16</div>
         <div class="rightside">
+            <mat-form-field>
+                <mat-label>Application</mat-label>
+                <mat-select formControlName="ApplicationId" fxFlex (selectionChange)="changeApplication($event)">
+                    <mat-option *ngFor="let app of Applications" [value]="app.MasterDataId">
+                        {{app.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
             <span>&nbsp;&nbsp;&nbsp;</span>
             <span style="font-size: small;" *ngIf="userName.length>0"> Hello,
                 {{userName}}</span>
@@ -32,11 +40,11 @@
             <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="login">
                 <mat-icon>account_circle</mat-icon>
             </button>
-            <mat-menu #menu="matMenu">
+            <mat-menu #menu="matMenu">                
                 <button mat-menu-item *ngIf="!loggedIn" (click)="gotoLogin()">
                     <mat-icon>login</mat-icon>login
                 </button>
-                <button mat-menu-item *ngIf="loggedIn" (click)="createlogin()">
+                <button mat-menu-item *ngIf="!loggedIn" (click)="createlogin()">
                     <mat-icon>create</mat-icon>Create login
                 </button>
                 <button mat-menu-item *ngIf="loggedIn" (click)="changepassword()">
