--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -1,74 +1,79 @@
 <mat-card [ngClass]="{'width100':deviceXs,'width80':!deviceXs}">
-    <mat-card-title>Create login</mat-card-title>
+    <mat-card-title style="margin-left: 20px;margin-top: 20px;">Sign up</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <alert></alert>
-        <div fxLayout="row" fxLayoutAlign="center start">
-            <!-- <div style="margin-right: 30px;">
-                <img *ngIf="!deviceXs" src="/assets/images/stpaulslogo.png" width="120px" alt="St Paul's Institute" />
-            </div> -->
-            <div>
-                <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-                    <div class="form-group">
-                        <label for="Email">Email</label>
-                        <input type="Email" class="form-control" name="Email" autocomplete="Off"
-                            [(ngModel)]="form.Email" required email #Email="ngModel" />
-                        <div class="alert-danger" *ngIf="Email.errors && f.submitted">
-                            <div *ngIf="Email.errors.required">Email is required</div>
-                            <div *ngIf="Email.errors.email">
+        <div class="container" fxLayout="row wrap" fxLayoutAlign="space-around center">
+                <form *ngIf="!isSuccessful" [formGroup]="RegistrationForm">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Name</mat-label>
+                        <input formControlName="UserName" autocomplete="Off" #UserName matInput maxlength="50">
+                        <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
+                        <span class="text-danger" *ngIf="f.UserName.touched && f.UserName.hasError('required')">
+                            Name is required.</span>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Contact No.</mat-label>
+                        <input formControlName="ContactNo" autocomplete="Off" #ContactNo matInput maxlength="20">
+                        <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
+                        <span class="text-danger" *ngIf="f.ContactNo.touched && f.ContactNo.hasError('required')">
+                            Contact No. is required.</span>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Organisation Name</mat-label>
+                        <input formControlName="OrganisationName" autocomplete="Off" matInput maxlength="50">
+                        <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
+                        <span class="text-danger" *ngIf="f.OrganisationName.touched && f.OrganisationName.hasError('required')">
+                            Organisation name is required.</span>
+                    </mat-form-field>                    
+                    <mat-form-field appearance="outline">
+                        <mat-label>Email</mat-label>
+                        <input formControlName="Email" type="email" autocomplete="Off" matInput maxlength="50">
+                        <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
+                        <span class="text-danger" *ngIf="f.Email.touched && f.Email.hasError('required')">
+                            Email is required.</span>
+                        <span *ngIf="f.Email.touched && f.Email.hasError('email')">
                                 Email must be a valid email address
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="Password">Password</label>
-                        <input type="password" class="form-control" name="Password" [(ngModel)]="form.Password" required
-                            minlength="6" #Password="ngModel" />
-                        <div class="alert-danger" *ngIf="Password.errors && f.submitted">
-                            <div *ngIf="Password.errors.required">Password is required</div>
-                            <div *ngIf="Password.errors.minlength">
+                            </span>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Password</mat-label>
+                        <input formControlName="Password" type="password" matInput autocomplete="Off" maxlength="50">
+                        <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
+                        <span class="text-danger" *ngIf="f.Password.touched && f.Password.hasError('required')">
+                            password is required.</span>
+                            <span *ngIf="f.Password.touched && f.Password.hasError('minlength')">
                                 Password must be at least 6 characters
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <label for="ConfirmPassword">ConfirmPassword</label>
-                        <input type="password" class="form-control" autocomplete="Off" name="ConfirmPassword"
-                            [(ngModel)]="form.ConfirmPassword" required minlength="3" maxlength="20"
-                            #ConfirmPassword="ngModel" />
-                        <div class="alert-danger" *ngIf="ConfirmPassword.errors && f.submitted">
-                            <div *ngIf="ConfirmPassword.errors.required">ConfirmPassword is required</div>
-                            <div *ngIf="ConfirmPassword!=Password">
+                            </span>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Confirm Password</mat-label>
+                        <input formControlName="ConfirmPassword" type="password" autocomplete="Off" matInput maxlength="50">
+                        <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
+                        <span class="alert-danger" *ngIf="f.ConfirmPassword.errors && f.submitted">
+                            <span *ngIf="f.ConfirmPassword.errors.required">ConfirmPassword is required</span>
+                            <span *ngIf="f.ConfirmPassword!=f.Password">
                                 The password and confirm password do not match
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <div fxLayoutAlign="space-around center">
-                        <button class="mat-raised-button" matTooltip="create">
+                            </span>
+                        </span>
+                    </mat-form-field>
+                    <div fxLayoutAlign="start">
+                        <button class="mat-raised-button" (click)="onSave()" matTooltip="create">
                             <mat-icon>create</mat-icon>
                         </button>
                         <button (click)="gotohome()" class="mat-raised-button" matTooltip="cancel">
                             <mat-icon>cancel</mat-icon>
                         </button>
-
                     </div>
-                    <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+                    <div style="padding: 20px;" class="alert alert-warning" *ngIf="errorMessage.length>0">
                         Signup failed!<br />{{ errorMessage }}
                     </div>
-
                 </form>
                 <div class="alert alert-success" *ngIf="isSuccessful">
-                    Login created successfully!<br><br>
-                    <!-- <button class="mat-raised-button" (click)="gotologin()" matTooltip="go to login">
-                                <mat-icon>create</mat-icon>   
-                            </button> -->
-                    <button (click)="gotohome()" class="mat-raised-button" matTooltip="cancel">
-                        <mat-icon>home</mat-icon>
-                    </button>
-                    <!-- <a [routerLink]="[ '../login']">Login</a> -->
+                    Please check and click on the link provided in your email for verification.
+
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
     </mat-card-content>
 </mat-card>
