--- a/src/app/modules/newsdashboard/newsdashboard.component.html
+++ b/src/app/modules/newsdashboard/newsdashboard.component.html
@@ -6,19 +6,25 @@
         <!-- <mat-divider></mat-divider> -->
         <div class="contentbox">
             <div fxLayout="row" fxLayoutAlign="start start" *ngFor="let element of AllData">
-                <img src="../../../assets/images/icons8-vote.svg" style="margin-top:8px;"/>
+                <img src="../../../assets/images/icons8-vote.svg" style="margin-top:8px;" />
                 <a class="subtitle" style="text-decoration:none;color:rgb(201, 200, 200)" (click)="view(element)">
-                    <div>{{element.Title|titlecase}}
+                    <div>{{element.Title}}
                         <br><span style="color:rgb(201, 200, 200,.9);font-size: small;">
                             {{element.UpdateDate|date:'dd/MM/yyyy'}}</span>
                     </div>
                 </a>
                 <!-- <mat-divider></mat-divider> -->
             </div>
+            <button style="margin-top: 20px;float: right;" *ngIf="AllData.length>4" class="mat-raised-button"
+                (click)="allnews()">
+                All news & events
+            </button>
         </div>
         <mat-divider></mat-divider>
-        <mat-paginator *ngIf="AllData.length>0" style="color:rgb(201, 200, 200);background-color:var(--maincolor1);" [pageSizeOptions]="[10, 25, 100]">
-        </mat-paginator>
+
+
+        <!-- <mat-paginator *ngIf="AllData.length>0" style="color:rgb(201, 200, 200);background-color:var(--maincolor1);" [pageSizeOptions]="[10, 25, 100]">
+        </mat-paginator> -->
 
     </mat-card-content>
 </mat-card>
